# lab09

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md
examples/: exm.cpp
include/: heapSort.h  inser.h  kurs_test.h  merge_sort.h  quick_sort.h
sources/: kurs_test.cpp  merge.cpp
tests/: testsortheap.cpp  testsortinsert.cpp  testsortmerge.cpp  testsortquick.cpp  testsorttime.cpp
